--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-O9DVE4T\\SQLEXPRESS;Database=ServicesDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-O9DVE4T\\SQLEXPRESS;Database=ServicesDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DebugConnection": "Data Source=Services.db"
   },
   "Logging": {
     "LogLevel": {
